Correct alignement between user and nav

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1 {
     align-items: center;
     list-style: none;
     font-weight: 500;
-    font-size: 1.4rem;
+    font-size: min(1.4rem, 20px);
 
     margin-bottom: 15px;
     padding-left: 20px;
@@ -106,7 +106,7 @@ h1 {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 20px;
+    padding-right: 30px;
     gap: 20px;
 
     font-weight: 500;
@@ -127,7 +127,6 @@ h1 {
     display: grid;
     grid-template-columns: 2fr 1fr;
     align-items: center;
-    justify-items: center;
 }
 
 .welcome {
@@ -154,14 +153,17 @@ h1 {
 
 .nav ul {
     display: grid;
+    justify-items: flex-end;
     grid-template-columns: repeat(3, 1fr);
     gap: 15px;
     margin: 10px;
+    margin-right: 30px;
 }
 
 .nav li {
     background-color: rgb(91, 91, 223);
     border: 1px solid rgb(91, 91, 223);
+    justify-self: flex-end;
     color: white;
     text-align: center;
     border-radius: 15px;
